# micro.libcore

./: CMakeLists.txt  LICENSE
.devcontainer/: Dockerfile
include/libcore/: int.hh  lib.hh
include/libcore/driver/: video.hh
include/libcore/graphic/: cubemap.hh  ibuffer.hh  surface.hh  texture.hh  vbuffer.hh
include/libcore/io/: file.hh  mmap.hh
include/libcore/lib/: buffer.hh  future.hh  handle.hh  logger.hh  memory.hh  panics.hh  result.hh  stream.hh  string.hh  vector.hh
include/libvk13/: device.hh  driver.hh
src/: test.cc
src/libcore/driver/: video.cc
src/libcore/graphic/: cubemap.cc  ibuffer.cc  surface.cc  texture.cc  vbuffer.cc
src/libcore/io/: file_nix.cc  file_nix.hh  mmap_nix.cc  mmap_nix.hh
src/libcore/lib/: buffer.cc  logger.cc  memory.cc  panics.cc  string.cc
src/libvk13/: abstract_device.cc  abstract_device.hh  device.cc  device.hh  device_adapter.cc  device_adapter.hh  device_debug_callback.cc  device_debug_callback.hh  device_factory.cc  device_factory.hh  device_rbuffer.cc  device_rbuffer.hh  driver.cc  driver.hh  instance.cc  instance.hh
test/: int.cc  lib.cc  lib_handle.cc
